--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,23 @@
 Package: eixport
 Title: Exporting emissions
-Version: 0.0.1.9000
+Version: 0.0.2.9000
 Authors@R: c(
-  person(given = "Sergio", family = "Ibarra-Espinosa",
-        role = c("aut", "cre"),
-        email = "sergio.ibarra@usp.br",
-        comment = c(ORCID = "0000-0002-3162-1905"))) 
+  person(given = "Sergio",
+         family = "Ibarra-Espinosa",
+         role = c("aut", "cre"),
+         email = "sergio.ibarra@usp.br",
+         comment = c(ORCID = "0000-0002-3162-1905")),
+  person(given = "Daniel",
+         family = "Schuch",
+         role = c("aut"),
+         email = "underschuch@gmail.com")
+        ) 
 Description: Export emissions.
 License: MIT + file LICENSE
 URL: https://github.com/ibarraespinosa/eixport
 BugReports: https://github.com/ibarraespinosa/eixport/issues/
-Depends: R (>= 3.4.1)
+Depends: R (>= 3.4.1), ncdf4
+Suggests: sp, sf
 Encoding: UTF-8
 LazyData: no
 RoxygenNote: 6.0.1
