Adding Lights data and exemple updates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,8 @@
 export(to_cmaq)
 export(to_rline)
 export(to_smoke)
+export(to_wrf)
 export(wrf_create)
-export(wrf_emission)
 export(wrf_get)
 export(wrf_plot)
 export(wrf_put)
