--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: eixport
 Title: Exporting emissions
-Version: 0.2.6
+Version: 0.2.7
 Authors@R: c(
   person(given = "Sergio",
          family = "Ibarra-Espinosa",
@@ -18,7 +18,8 @@ License: MIT + file LICENSE
 URL: https://github.com/ibarraespinosa/eixport
 BugReports: https://github.com/ibarraespinosa/eixport/issues/
 Depends: R (>= 3.4.1), ncdf4
-Suggests: sp, sf
+Imports: sf
+Suggests: sp
 Encoding: UTF-8
 LazyData: no
 RoxygenNote: 6.0.1
