--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,6 +19,7 @@ URL: https://github.com/ibarraespinosa/eixport
 BugReports: https://github.com/ibarraespinosa/eixport/issues/
 Depends: R (>= 3.4.1), ncdf4
 Suggests: sp
+Imports: sf
 Encoding: UTF-8
 LazyData: no
 RoxygenNote: 6.0.1
