--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,10 @@ export(wrf_get)
 export(wrf_plot)
 export(wrf_profile)
 export(wrf_put)
+import(ncdf4)
+importFrom(raster,brick)
+importFrom(raster,flip)
+importFrom(raster,raster)
 importFrom(sf,st_as_sf)
 importFrom(sf,st_coordinates)
 importFrom(sf,st_set_geometry)
