--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,9 +17,9 @@ Description: Export emissions.
 License: MIT + file LICENSE
 URL: https://github.com/ibarraespinosa/eixport
 BugReports: https://github.com/ibarraespinosa/eixport/issues/
-Depends: R (>= 3.4.1), raster
+Depends: R (>= 3.4.1)
 Suggests: sp
-Imports: sf,ncdf4
+Imports: sf,ncdf4,raster
 Encoding: UTF-8
 LazyData: no
 RoxygenNote: 6.0.1
