--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ import(ncdf4)
 importFrom(raster,brick)
 importFrom(raster,flip)
 importFrom(raster,raster)
+importFrom(raster,crs)
 importFrom(sf,st_as_sf)
 importFrom(sf,st_coordinates)
 importFrom(sf,st_set_geometry)
