--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,11 +10,13 @@ export(wrf_plot)
 export(wrf_profile)
 export(wrf_put)
 import(ncdf4)
+import(raster)
 importFrom(raster,brick)
 importFrom(raster,flip)
 importFrom(raster,raster)
-importFrom(raster,crs)
 importFrom(sf,st_as_sf)
 importFrom(sf,st_coordinates)
+importFrom(sf,st_multipolygon)
+importFrom(sf,st_polygon)
 importFrom(sf,st_set_geometry)
 importFrom(sf,st_transform)
