Fixing wrf_grid

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(to_wrf)
 export(vein_to_wrf)
 export(wrf_create)
 export(wrf_get)
+export(wrf_grid)
 export(wrf_plot)
 export(wrf_profile)
 export(wrf_put)
