fixing wrf_grid, now returns sf

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,6 @@
 export(to_brams_spm)
 export(to_rline)
 export(to_wrf)
-export(vein_to_wrf)
 export(wrf_create)
 export(wrf_get)
 export(wrf_grid)
@@ -20,4 +19,6 @@ importFrom(sf,st_coordinates)
 importFrom(sf,st_multipolygon)
 importFrom(sf,st_polygon)
 importFrom(sf,st_set_geometry)
+importFrom(sf,st_sf)
+importFrom(sf,st_sfc)
 importFrom(sf,st_transform)
