fixing CMD check --as-cran

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,19 @@ export(wrf_profile)
 export(wrf_put)
 import(ncdf4)
 import(raster)
+importFrom(grDevices,cm.colors)
+importFrom(grDevices,gray.colors)
+importFrom(graphics,.filled.contour)
+importFrom(graphics,Axis)
+importFrom(graphics,axis)
+importFrom(graphics,box)
+importFrom(graphics,layout)
+importFrom(graphics,mtext)
+importFrom(graphics,par)
+importFrom(graphics,plot.new)
+importFrom(graphics,plot.window)
+importFrom(graphics,rect)
+importFrom(graphics,title)
 importFrom(raster,brick)
 importFrom(raster,flip)
 importFrom(raster,raster)
@@ -22,3 +35,4 @@ importFrom(sf,st_set_geometry)
 importFrom(sf,st_sf)
 importFrom(sf,st_sfc)
 importFrom(sf,st_transform)
+importFrom(utils,menu)
