--- a/.travis.yml
+++ b/.travis.yml
@@ -4,17 +4,23 @@ language: R
 dist: trusty
 sudo: required
 cache: packages
-addons:
-   apt:
-     packages:
-       - libgeos-dev
-       - gdal-bin
-       - libudunits2-dev
-       - libproj-dev
-       - libgdal-dev
-       - libnetcdf-dev
-       - netcdf-bin
-
+before_install:
+  - sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable --yes
+  - sudo apt-get --yes --force-yes update -qq
+  # install tmap dependencies
+  - sudo apt-get install --yes libprotobuf-dev protobuf-compiler libv8-3.14-dev
+  # install tmap dependencies; for 16.04 libjq-dev this ppa is needed:
+  - sudo add-apt-repository -y ppa:opencpu/jq
+  - sudo apt-get --yes --force-yes update -qq
+  - sudo apt-get install libjq-dev
+  # units/udunits2 dependency:
+  - sudo apt-get install --yes libudunits2-dev
+  # sf dependencies:
+  - sudo apt-get install --yes libproj-dev libgeos-dev libgdal-dev
+  # some postgis:
+  - sudo apt-get --yes install libjson-c-dev
+  # NetCDF
+  sudo apt-get --yes install libnetcdf-dev netcdf-bin
 r_packages:
   - covr
 
