--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
+
+
 language: R
 dist: trusty
 sudo: required
-cache: packages
+#cache: packages
 before_install:
   - sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable --yes
   - sudo apt-get --yes --force-yes update -qq
