--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,10 +27,12 @@ importFrom(graphics,rect)
 importFrom(graphics,title)
 importFrom(raster,brick)
 importFrom(raster,flip)
+importFrom(raster,projectRaster)
 importFrom(raster,raster)
 importFrom(raster,rasterize)
 importFrom(raster,resample)
 importFrom(sf,st_as_sf)
+importFrom(sf,st_cast)
 importFrom(sf,st_coordinates)
 importFrom(sf,st_multipolygon)
 importFrom(sf,st_polygon)
