--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,6 @@ export(wrf_plot)
 export(wrf_profile)
 export(wrf_put)
 import(ncdf4)
-import(raster)
 importFrom(grDevices,cm.colors)
 importFrom(grDevices,gray.colors)
 importFrom(graphics,.filled.contour)
@@ -36,4 +35,5 @@ importFrom(sf,st_set_geometry)
 importFrom(sf,st_sf)
 importFrom(sf,st_sfc)
 importFrom(sf,st_transform)
+importFrom(sp,CRS)
 importFrom(utils,menu)
