--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(to_as4wrf)
 export(to_brams_spm)
+export(to_munich)
 export(to_rline)
 export(to_wrf)
 export(wrf_create)
@@ -32,6 +33,8 @@ importFrom(raster,raster)
 importFrom(sf,st_as_sf)
 importFrom(sf,st_cast)
 importFrom(sf,st_coordinates)
+importFrom(sf,st_geometry)
+importFrom(sf,st_length)
 importFrom(sf,st_multipolygon)
 importFrom(sf,st_polygon)
 importFrom(sf,st_set_geometry)
