--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,7 @@
 Package: eixport
 Title: Export Emissions to Atmospheric Models
 Version: 0.3.5
+Date: 2018-03-02
 Authors@R: c(
   person(given = "Sergio",
          family = "Ibarra-Espinosa",
