- added wrf_add function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(to_brams_spm)
 export(to_munich)
 export(to_rline)
 export(to_wrf)
+export(wrf_add)
 export(wrf_create)
 export(wrf_get)
 export(wrf_grid)
