--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: eixport
 Title: Export Emissions to Atmospheric Models
-Version: 0.3.9
+Version: 0.4.0
 Date: 2019-10-12
 Authors@R: c(
   person(given = "Sergio",
@@ -24,7 +24,7 @@ License: MIT + file LICENSE
 URL: https://atmoschem.github.io/eixport
 BugReports: https://github.com/atmoschem/eixport/issues/
 Depends: R (>= 3.5.0)
-Imports: sf, ncdf4, raster, sp, methods, cptcity, utils
+Imports: sf, ncdf4, raster, sp, methods, cptcity, utils, tidyr, silicate, sfheaders
 Encoding: UTF-8
 LazyData: no
 RoxygenNote: 6.1.1
