now wrf_put support hourly profilesgit add .git add .git add .git add .git add .!

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,9 @@ importFrom(graphics,plot.window)
 importFrom(graphics,rect)
 importFrom(graphics,title)
 importFrom(methods,as)
+importFrom(ncdf4,nc_close)
+importFrom(ncdf4,nc_open)
+importFrom(ncdf4,ncvar_put)
 importFrom(raster,brick)
 importFrom(raster,flip)
 importFrom(raster,raster)
