--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(get_edgar)
 export(sfx_explode)
+export(st_explode)
 export(to_as4wrf)
 export(to_brams_spm)
 export(to_munich)
@@ -40,6 +41,7 @@ importFrom(sf,st_as_sf)
 importFrom(sf,st_cast)
 importFrom(sf,st_coordinates)
 importFrom(sf,st_geometry)
+importFrom(sf,st_intersection)
 importFrom(sf,st_length)
 importFrom(sf,st_multipolygon)
 importFrom(sf,st_polygon)
