Improve wrf_grid

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,22 +33,21 @@ importFrom(graphics,title)
 importFrom(methods,as)
 importFrom(ncdf4,nc_close)
 importFrom(ncdf4,nc_open)
+importFrom(ncdf4,ncatt_get)
+importFrom(ncdf4,ncvar_get)
 importFrom(ncdf4,ncvar_put)
 importFrom(raster,brick)
 importFrom(raster,flip)
 importFrom(raster,raster)
+importFrom(raster,rasterToPolygons)
 importFrom(sf,st_as_sf)
-importFrom(sf,st_cast)
 importFrom(sf,st_coordinates)
 importFrom(sf,st_geometry)
 importFrom(sf,st_intersection)
 importFrom(sf,st_length)
-importFrom(sf,st_multipolygon)
-importFrom(sf,st_polygon)
 importFrom(sf,st_set_crs)
 importFrom(sf,st_set_geometry)
 importFrom(sf,st_sf)
-importFrom(sf,st_sfc)
 importFrom(sf,st_transform)
 importFrom(sfheaders,sf_linestring)
 importFrom(silicate,SC0)
