--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: eixport
 Title: Export Emissions to Atmospheric Models
-Version: 0.4.5
-Date: 2020-02-23
+Version: 0.4.7
+Date: 2020-06-24
 Authors@R: c(
   person(given = "Sergio",
          family = "Ibarra-Espinosa",
@@ -24,7 +24,7 @@ License: MIT + file LICENSE
 URL: https://atmoschem.github.io/eixport
 BugReports: https://github.com/atmoschem/eixport/issues/
 Depends: R (>= 3.5.0)
-Imports: sf, ncdf4, raster, sp, methods, cptcity, utils, tidyr, silicate, sfheaders
+Imports: sf, ncdf4, raster, sp, methods, cptcity, utils, tidyr, silicate (>= 0.3), sfheaders (>= 0.2.1)
 Encoding: UTF-8
 LazyData: no
 RoxygenNote: 7.0.2
