--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,8 @@ importFrom(ncdf4,nc_open)
 importFrom(ncdf4,ncatt_get)
 importFrom(ncdf4,ncvar_get)
 importFrom(ncdf4,ncvar_put)
+importFrom(parallel,detectCores)
+importFrom(parallel,mclapply)
 importFrom(raster,brick)
 importFrom(raster,flip)
 importFrom(raster,raster)
@@ -53,5 +55,7 @@ importFrom(sfheaders,sf_linestring)
 importFrom(silicate,SC0)
 importFrom(sp,CRS)
 importFrom(tidyr,unnest)
+importFrom(utils,askYesNo)
+importFrom(utils,data)
 importFrom(utils,download.file)
 importFrom(utils,menu)
