--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -5,7 +5,7 @@ template:
     ganalytics: UA-2642843-6
 authors:
   Sergio Ibarra-Espinosa:
-    href: http://www.sergioibarra.github.io
+    href: http://www.ibarraespinosa.github.io
   Daniel Schuch:
 navbar:
   structure:
