add wrf_summary and jump to 0.5.0, submitting to CRAN in next days

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(wrf_meta)
 export(wrf_plot)
 export(wrf_profile)
 export(wrf_put)
+export(wrf_summary)
 import(ncdf4)
 importFrom(cptcity,cpt)
 importFrom(grDevices,cm.colors)
@@ -41,6 +42,7 @@ importFrom(ncdf4,ncvar_put)
 importFrom(parallel,detectCores)
 importFrom(parallel,mclapply)
 importFrom(raster,brick)
+importFrom(raster,cellStats)
 importFrom(raster,flip)
 importFrom(raster,raster)
 importFrom(raster,rasterToPolygons)
