--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,5 +28,5 @@ Imports: sf, ncdf4, raster, sp, methods, cptcity, utils, tidyr, silicate (>= 0.3
 Encoding: UTF-8
 LazyData: no
 RoxygenNote: 7.1.1
-Suggests: testthat, covr, lwgeom, vein, units
+Suggests: testthat, covr, lwgeom, units
 Roxygen: list(markdown = TRUE)
