--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,5 +28,12 @@ Imports: sf, ncdf4, raster, sp, methods, cptcity, utils, tidyr, silicate (>= 0.3
 Encoding: UTF-8
 LazyData: no
 RoxygenNote: 7.1.1
-Suggests: testthat, covr, lwgeom, units
+Suggests: 
+    testthat,
+    covr,
+    lwgeom,
+    units,
+    knitr,
+    rmarkdown
 Roxygen: list(markdown = TRUE)
+VignetteBuilder: knitr
