--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -4,5 +4,6 @@ pkgdown_sha: ~
 articles:
   gallery1: gallery1.html
   gallery2: gallery2.html
-last_built: 2020-10-19T13:50Z
+  gallery3: gallery3.html
+last_built: 2020-10-19T16:16Z
 
