--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,9 @@ export(wrf_put)
 export(wrf_summary)
 import(ncdf4)
 importFrom(cptcity,cpt)
+importFrom(data.table,".N")
+importFrom(data.table,".SD")
+importFrom(data.table,as.data.table)
 importFrom(grDevices,cm.colors)
 importFrom(grDevices,gray.colors)
 importFrom(graphics,.filled.contour)
@@ -48,17 +51,18 @@ importFrom(raster,rasterToPolygons)
 importFrom(raster,rotate)
 importFrom(raster,stack)
 importFrom(sf,st_as_sf)
+importFrom(sf,st_as_sfc)
+importFrom(sf,st_as_text)
 importFrom(sf,st_coordinates)
+importFrom(sf,st_crs)
+importFrom(sf,st_geometry)
 importFrom(sf,st_intersection)
 importFrom(sf,st_length)
-importFrom(sf,st_set_crs)
+importFrom(sf,st_linestring)
 importFrom(sf,st_set_geometry)
 importFrom(sf,st_sf)
 importFrom(sf,st_transform)
-importFrom(sfheaders,sf_linestring)
-importFrom(silicate,SC0)
 importFrom(sp,CRS)
-importFrom(tidyr,unnest)
 importFrom(utils,askYesNo)
 importFrom(utils,data)
 importFrom(utils,download.file)
