--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ importFrom(cptcity,cpt)
 importFrom(data.table,".N")
 importFrom(data.table,".SD")
 importFrom(data.table,as.data.table)
+importFrom(data.table,rbindlist)
 importFrom(grDevices,cm.colors)
 importFrom(grDevices,gray.colors)
 importFrom(graphics,.filled.contour)
@@ -52,13 +53,12 @@ importFrom(raster,rotate)
 importFrom(raster,stack)
 importFrom(sf,st_as_sf)
 importFrom(sf,st_as_sfc)
-importFrom(sf,st_as_text)
+importFrom(sf,st_cast)
 importFrom(sf,st_coordinates)
 importFrom(sf,st_crs)
 importFrom(sf,st_geometry)
 importFrom(sf,st_intersection)
 importFrom(sf,st_length)
-importFrom(sf,st_linestring)
 importFrom(sf,st_set_geometry)
 importFrom(sf,st_sf)
 importFrom(sf,st_transform)
@@ -67,3 +67,5 @@ importFrom(utils,askYesNo)
 importFrom(utils,data)
 importFrom(utils,download.file)
 importFrom(utils,menu)
+importFrom(utils,setTxtProgressBar)
+importFrom(utils,txtProgressBar)
