--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,9 @@ importFrom(methods,as)
 importFrom(ncdf4,nc_close)
 importFrom(ncdf4,nc_open)
 importFrom(ncdf4,ncatt_get)
+importFrom(ncdf4,ncatt_put)
+importFrom(ncdf4,ncdim_def)
+importFrom(ncdf4,ncvar_def)
 importFrom(ncdf4,ncvar_get)
 importFrom(ncdf4,ncvar_put)
 importFrom(parallel,detectCores)
