--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -6,5 +6,6 @@ articles:
   gallery1: gallery1.html
   gallery2: gallery2.html
   gallery3: gallery3.html
-last_built: 2020-10-22T22:43Z
+  gallery5: gallery5.html
+last_built: 2020-11-13T03:02Z
 
