--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,7 +24,7 @@ License: MIT + file LICENSE
 URL: https://atmoschem.github.io/eixport/
 BugReports: https://github.com/atmoschem/eixport/issues/
 Depends: R (>= 3.5.0)
-Imports: sf, ncdf4, raster, sp, methods, cptcity, utils, parallel, data.table
+Imports: sf, ncdf4, raster, sp, methods, cptcity, utils, parallel, data.table, rgdal
 Encoding: UTF-8
 LazyData: no
 RoxygenNote: 7.1.1
