--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,8 +17,10 @@ export(wrf_meta)
 export(wrf_plot)
 export(wrf_profile)
 export(wrf_put)
+export(wrf_raster)
 export(wrf_summary)
 import(ncdf4)
+import(raster)
 importFrom(cptcity,cpt)
 importFrom(data.table,".N")
 importFrom(data.table,".SD")
@@ -54,6 +56,7 @@ importFrom(raster,raster)
 importFrom(raster,rasterToPolygons)
 importFrom(raster,rotate)
 importFrom(raster,stack)
+importFrom(rgdal,project)
 importFrom(sf,st_as_sf)
 importFrom(sf,st_as_sfc)
 importFrom(sf,st_cast)
