--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(wrf_raster)
 export(wrf_summary)
 import(ncdf4)
 import(raster)
+import(sf)
 importFrom(cptcity,cpt)
 importFrom(data.table,".N")
 importFrom(data.table,".SD")
