--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,15 +10,18 @@ Authors@R: c(
          comment = c(ORCID = "0000-0002-3162-1905")),
   person(given = "Daniel",
          family = "Schuch",
-         role = c("ctb"),
+         role = c("aut"),
          email = "underschuch@gmail.com",
          comment = c(ORCID = "0000-0001-5977-4519")),
   person(given = "Edmilson",
          family = "Freitas",
-         role = c("ctb"),
+         role = c("ths"),
          email = "edmilson.freitas@iag.usp.br",
-         comment = c(ORCID = "0000-0001-8783-2747"))
-  ) 
+         comment = c(ORCID = "0000-0001-8783-2747")),
+  person(given = "Umur",
+         family = "Dinç",
+         role = c("ctb"),
+         email = "umur.dinc@gmail.com"))
 Description: Emissions are the mass of pollutants released into the atmosphere. Air quality models need emissions data, with spatial and temporal distribution, to represent air pollutant concentrations. This package, eixport, creates inputs for the air quality models 'WRF-Chem' Grell et al (2005) <doi:10.1016/j.atmosenv.2005.04.027>, 'MUNICH' Kim et al (2018) <doi:10.5194/gmd-11-611-2018> , 'BRAMS-SPM' Freitas et al (2005) <doi:10.1016/j.atmosenv.2005.07.017> and 'RLINE' Snyder et al (2013) <doi:10.1016/j.atmosenv.2013.05.074>. See the 'eixport' website (<https://atmoschem.github.io/eixport/>) for more information, documentations and examples. More details in Ibarra-Espinosa et al (2018) <doi:10.21105/joss.00607>.
 License: MIT + file LICENSE
 URL: https://atmoschem.github.io/eixport/
