--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: eixport
 Title: Export Emissions to Atmospheric Models
-Version: 0.5.3
-Date: 2021-04-14
+Version: 0.5.4
+Date: 2023-03-27
 Authors@R: c(
   person(given = "Sergio",
          family = "Ibarra-Espinosa",
@@ -28,7 +28,7 @@ License: MIT + file LICENSE
 URL: https://atmoschem.github.io/eixport/
 BugReports: https://github.com/atmoschem/eixport/issues/
 Depends: R (>= 3.5.0)
-Imports: sf, ncdf4, raster, sp, methods, cptcity, utils, parallel, data.table, rgdal
+Imports: sf, ncdf4, raster, methods, cptcity, utils, parallel, data.table
 Encoding: UTF-8
 LazyData: no
 RoxygenNote: 7.1.2
