recover plot_raster

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(chem_edgar)
 export(get_edgar)
+export(plot_raster)
 export(sfx_explode)
 export(st_explode)
 export(to_as4wrf)
@@ -19,12 +20,14 @@ export(wrf_profile)
 export(wrf_put)
 export(wrf_summary)
 import(ncdf4)
+import(raster)
 importFrom(cptcity,cpt)
 importFrom(data.table,".N")
 importFrom(data.table,".SD")
 importFrom(data.table,as.data.table)
 importFrom(data.table,rbindlist)
 importFrom(grDevices,cm.colors)
+importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,gray.colors)
 importFrom(graphics,.filled.contour)
 importFrom(graphics,Axis)
