--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,6 @@
 
 export(chem_edgar)
 export(get_edgar)
-export(plot_raster)
 export(sfx_explode)
 export(st_explode)
 export(to_as4wrf)
@@ -18,16 +17,17 @@ export(wrf_meta)
 export(wrf_plot)
 export(wrf_profile)
 export(wrf_put)
+export(wrf_raster)
 export(wrf_summary)
 import(ncdf4)
 import(raster)
+import(sf)
 importFrom(cptcity,cpt)
 importFrom(data.table,".N")
 importFrom(data.table,".SD")
 importFrom(data.table,as.data.table)
 importFrom(data.table,rbindlist)
 importFrom(grDevices,cm.colors)
-importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,gray.colors)
 importFrom(graphics,.filled.contour)
 importFrom(graphics,Axis)
